rewrote get my projects to use query instead of body
